--- a/css/user/space/friend.less
+++ b/css/user/space/friend.less
@@ -35,8 +35,10 @@
 		.maxh{.none;}
 	}
 }
-.screen-s #friend_ul li{
-	.w(39%);
+.ua-mobile,.screen-s{
+	#friend_ul li{
+		.w(39%);
+	}
 }
 
 .buddy_group{
@@ -51,7 +53,7 @@
 	}
 }
 
-.ua-responsive .screen-s {
+.ua-mobile,.screen-s {
 	.tbmu{padding:5px 10px;}
 	.m-friend-box{padding:0 !important;}
 	.m-friend-search{.none !important;}
