--- a/css/user/space/space/album.less
+++ b/css/user/space/space/album.less
@@ -1,6 +1,6 @@
 //相册
 .user-album-upload{
-	.mn{border:none;}
+	.mn{border:none !important;}
 
 	.uploadform{
 		background-color:#fafafa;
@@ -8,32 +8,13 @@
 	}
 }
 
-
-
-.tbmu .pn{
-	.lh(28px);
-}
-
-.bm_h{
-	border:1px solid #ddd;
-}
-#click_div{
-	padding:10px;
-	table{.auto(x);}
-	td{min-width:60px;}
-}
-.pbn .z{margin-right:10px;}
-
 .m-album-comment{
 	.tedt{
 		.w(auto);
 	}
 }
 
-.ua-responsive .screen-s {
-	.tbmu{
-		padding-left:10px;
-	}
+.ua-mobile,.screen-s {
 	.user-space-album-pub{
 		.none;
 	}
