--- a/css/user/space/space/blog.less
+++ b/css/user/space/space/blog.less
@@ -14,6 +14,24 @@
 	.u-date{margin-right:5px;}
 	.u-views{}
 }
+.m-blog-content{
+	overflow-x:auto;
+	a{color:@blue-link;text-decoration:underline;}
+	table{
+		.w(100%);
+		max-width:100%;
+		td,th{
+			border:1px solid #ddd;
+			padding:2px 5px;
+		}
+		tr:nth-child(2n+1){
+			background-color:#fff;
+		}
+		tr:nth-child(2n){
+			background-color:#eff6fa;
+		}
+	}
+}
 .m-blog-panel{
 	background-color:#fffffa;
 	padding:10px;
@@ -100,6 +118,9 @@
 }
 
 .m-blog-comment{
+	.quote{
+		color:#888;
+	}
 }
 
 .m-blog-bt{
@@ -121,4 +142,86 @@
 
 .m-blog-listpre{
 	color:#666;
+}
+
+.ua-mobile,.screen-s{
+	.m-space-bloglist-panel{
+	}
+
+	.m-space-bloglist{
+
+		.bbda{
+			background-color:#fff;
+			border-bottom:none;
+			padding:0 10px 10px 10px;
+			margin-bottom:20px;
+
+			.xg1{
+				font-size:13px;
+			}
+		}
+	}
+	
+
+	.m-space-bloglist-post{
+	    /*position: fixed;
+	    right: 28px;
+	    bottom: 80px;
+	    width: 48px;
+	    height: 48px;
+	    border-radius: 40px;
+	    box-shadow: 0 0 4px rgba(0,0,0,.2);*/
+	}
+
+	.m-blog,.m-blog-relative .u-list{
+		background-color:#fff;
+		padding:10px;
+	}
+	.m-blog-meta{
+		font-size:13px;
+	}
+
+	.m-blog-comment{
+		dt .y{
+			.db;
+			float:none;
+		}
+
+		dl{
+			font-size:13px;
+		}
+	}
+
+	.m-blog-panel{
+		font-size:13px;
+	}
+	.m-blog-share{
+		margin-bottom:10px;
+	}
+	.m-blog-share,.m-blog-fav{
+		float:none;
+		padding:0;
+		.u-title{.none;}
+	}
+	.m-blog-relative .u-title .u-all, .m-blog-comment .u-title .u-all{
+		margin-top:3px;
+		background-color:#259;
+		color:#fff;
+	}
+}
+
+.user-space-blogpost{
+	.mn{
+		border:none !important;
+	}
+}
+.ua-mobile,.screen-s{
+	.user-space-blogpost{
+		.bm{
+			border:none;
+		}
+		.bm_h{
+			.none;
+		}
+	}
 }
