--- a/css/user/space/space/profile.less
+++ b/css/user/space/space/profile.less
@@ -1,5 +1,6 @@
 //详细资料
-	.u_profile{
+.user-space-profile{
+	.m-profile{
 		*{line-height:2.2;}
 		h2{line-height:2;}
 
@@ -30,13 +31,26 @@
 		.dt td, .dt th{padding:0 5px;}
 		.dt th{background-color:#f7f7f7;}
 	}
-
-.ua-responsive .screen-s{
-	.u_profile{
-		padding:0;
+}
+	
+.ua-mobile,.screen-s{
+	.user-space-profile{
+		font-size:13px;
 	}
-	.u_profile .pf_l li{
+	.m-profile{
+		padding:0 10px;
+	}
+	.m-profile .pf_l li{
 		.w(auto);
 		float:none;
+	}
+	.bbda{
+		border-bottom:none;
+	}
+	.user-space-profile-block{
+		background-color:#fff;
+		border-bottom:none;
+		padding:10px;
+		margin-bottom:10px;
 	}
 }
