--- a/css/user/space/space/share.less
+++ b/css/user/space/space/share.less
@@ -19,8 +19,8 @@
 			.quote{
 				color:#888;
 			}
-			border: 1px solid #AADEF7;
-    		background-color: #E8FAFF;
+    		background-color:#EFF8FD;
+			border:1px solid #BADCF1;
 		}
 	}
 }
@@ -63,4 +63,24 @@
 	.w(100%) !important;
 	padding:0 10px;
 	box-sizing:border-box;
+}
+
+
+.ua-mobile,.screen-s{
+	
+	#click_div{.none;}
+	.vw .o{
+		a,.pipe{.none;}
+		.ofav,.oshr{.db;}
+		.oivt{.none;}
+	}
+	#fwin_a_favorite,#fwin_a_share{
+		.c textarea{
+		    width: 100% !important;
+	    	box-sizing: border-box;
+    	}
+    	.m_c .el{
+    		.w(auto);
+    	}
+	}
 }
