--- a/template/yylmacro/home/5.空间/follow_feed.htm
+++ b/template/yylmacro/home/5.空间/follow_feed.htm
@@ -16,7 +16,7 @@
 				<!--{subtemplate home/sidebar}-->
 				<div class="user-content">
 
-	<div id="ct" class="ct2_a cl">
+	<div id="ct" class="ct2_a cl user-space-follow">
 		<!--{if $_G[setting][homestyle]}-->
 		<!--{else}-->
 		<div class="appl">
@@ -36,7 +36,7 @@
 <!--{else}-->
 	<!--{if $_G[setting][homepagestyle]}-->
 		<!--{subtemplate home/space_header}-->
-		<div id="ct" class="ct2 wp cl">
+		<div id="ct" class="ct2 wp cl user-space-follow">
 			<div class="mn">
 				<div class="bm">
 					<div class="bm_h">
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 		<!--{template home/space_menu}-->
-		<div id="ct" class="ct1 wp cl">
+		<div id="ct" class="ct1 wp cl user-space-follow">
 			<div class="mn">
 				<!--[diy=diycontenttop]--><div id="diycontenttop" class="area"></div><!--[/diy]-->
 				<div class="bm bw0">
