--- a/template/yylmacro/home/5.空间/space_menu.htm
+++ b/template/yylmacro/home/5.空间/space_menu.htm
@@ -5,27 +5,32 @@
 			<!--{subtemplate home/follow_user_header}-->
 		<!--{elseif !$space[self]}-->
 		<div class="mn">
-			<ul>
-				<!--{if helper_access::check_module('follow')}-->
-				<li class="addflw">
-					<!--{if !ckfollow($space['uid'])}-->
-						<a id="followmod" onclick="showWindow(this.id, this.href, 'get', 0);" href="home.php?mod=spacecp&ac=follow&op=add&hash={FORMHASH}&fuid=$space[uid]">{lang follow_add}TA</a>
-					<!--{else}-->
-						<a id="followmod" onclick="showWindow(this.id, this.href, 'get', 0);" href="home.php?mod=spacecp&ac=follow&op=del&fuid=$space[uid]">{lang follow_del}</a>
+			<div class="i-header-panel" id="i-header-panel">
+				<ul>
+					<!--{if helper_access::check_module('follow')}-->
+					<li class="addflw">
+						<!--{if !ckfollow($space['uid'])}-->
+							<a id="followmod" onclick="showWindow(this.id, this.href, 'get', 0);" href="home.php?mod=spacecp&ac=follow&op=add&hash={FORMHASH}&fuid=$space[uid]">{lang follow_add}TA</a>
+						<!--{else}-->
+							<a id="followmod" onclick="showWindow(this.id, this.href, 'get', 0);" href="home.php?mod=spacecp&ac=follow&op=del&fuid=$space[uid]">{lang follow_del}</a>
+						<!--{/if}-->
+					</li>
 					<!--{/if}-->
-				</li>
-				<!--{/if}-->
-				<li class="addf">
-					<!--{if !$isfriend}-->
-					<a href="home.php?mod=spacecp&ac=friend&op=add&uid=$space[uid]&handlekey=addfriendhk_{$space[uid]}" id="a_friend_li_{$space[uid]}" onclick="showWindow(this.id, this.href, 'get', 0);" class="xi2">{lang add_friend}</a>
-					<!--{else}-->
-					<a href="home.php?mod=spacecp&ac=friend&op=ignore&uid=$space[uid]&handlekey=ignorefriendhk_{$space[uid]}" id="a_ignore_{$space[uid]}" onclick="showWindow(this.id, this.href, 'get', 0);" class="xi2">{lang ignore_friend}</a>
-					<!--{/if}-->
-				</li>
-				<li class="pm2">
-					<a href="home.php?mod=spacecp&ac=pm&op=showmsg&handlekey=showmsg_$space[uid]&touid=$space[uid]&pmid=0&daterange=2" id="a_sendpm_$space[uid]" onclick="showWindow('showMsgBox', this.href, 'get', 0)" title="{lang send_pm}">{lang send_pm}</a>
-				</li>
-			</ul>
+					<li class="addf">
+						<!--{if !$isfriend}-->
+						<a href="home.php?mod=spacecp&ac=friend&op=add&uid=$space[uid]&handlekey=addfriendhk_{$space[uid]}" id="a_friend_li_{$space[uid]}" onclick="showWindow(this.id, this.href, 'get', 0);" class="xi2">{lang add_friend}</a>
+						<!--{else}-->
+						<a href="home.php?mod=spacecp&ac=friend&op=ignore&uid=$space[uid]&handlekey=ignorefriendhk_{$space[uid]}" id="a_ignore_{$space[uid]}" onclick="showWindow(this.id, this.href, 'get', 0);" class="xi2">{lang ignore_friend}</a>
+						<!--{/if}-->
+					</li>
+					<li class="pm2">
+						<a href="home.php?mod=spacecp&ac=pm&op=showmsg&handlekey=showmsg_$space[uid]&touid=$space[uid]&pmid=0&daterange=2" id="a_sendpm_$space[uid]" onclick="showWindow('showMsgBox', this.href, 'get', 0)" title="{lang send_pm}">{lang send_pm}</a>
+					</li>
+					<li>
+						<a class="u-cancel" href="javascript:;" id="i-header-panel-cancel">取消</a>
+					</li>
+				</ul>
+			</div>
 			<!--{if helper_access::check_module('follow')}-->
 			<script type="text/javascript">
 			function succeedhandle_followmod(url, msg, values) {
