--- a/template/yylmacro/home/5.空间/space_profile.htm
+++ b/template/yylmacro/home/5.空间/space_profile.htm
@@ -1,6 +1,6 @@
 <!--{if $_G[setting][homepagestyle]}-->
 	<!--{subtemplate home/space_header}-->
-	<div id="ct" class="ct2 wp cl">
+	<div id="ct" class="ct2 wp cl user-space-profile">
 		<div class="mn">
 			<div class="bm">
 				<div class="bm_h">
@@ -25,7 +25,7 @@
 		<!--[diy=diy1]--><div id="diy1" class="area"></div><!--[/diy]-->
 	</div>
 	<!--{template home/space_menu}-->
-	<div id="ct" class="wp cl">
+	<div id="ct" class="wp cl user-space-profile">
 		<div class="mn">
 			<!--[diy=diycontenttop]--><div id="diycontenttop" class="area"></div><!--[/diy]-->
 			<div class="bm bw0">
