--- a/template/yylmacro/home/5.空间/spacecp_blog.htm
+++ b/template/yylmacro/home/5.空间/spacecp_blog.htm
@@ -81,7 +81,7 @@
 		</div>
 	</div>
 
-	<div id="ct" class="wp cl">
+	<div id="ct" class="wp cl user-space-blogpost">
 		<div class="mn">
 			<div class="bm cl">
 				<div class="bm_h">
