--- a/css/user/space/space.less
+++ b/css/user/space/space.less
@@ -6,12 +6,16 @@
 @import url('../../module/ui/textarea.less');		//配色
 @import url('../../module/ui/button.less');		//配色
 
-@import url('share.less');
-@import url('doing.less');
-@import url('album.less');
-@import url('wall.less');
-@import url('thread.less');
-@import url('blog.less');
-@import url('profile.less');
-@import url('follow.less');
-@import url('common.less');
+@import url('space/common.less');
+@import url('space/header.less');
+
+
+@import url('space/share.less');
+@import url('space/doing.less');
+@import url('space/album.less');
+@import url('space/wall.less');
+@import url('space/thread.less');
+@import url('space/blog.less');
+@import url('space/profile.less');
+@import url('space/follow.less');
+
