--- a/css/user/space/space/doing.less
+++ b/css/user/space/space/doing.less
@@ -9,6 +9,10 @@
 	.cmt{
 		background-color:#f7f7f7;
 	}
+	.brm{
+		.r(3px);
+		padding:0 10px;
+	}
 }
 
 #moodfm{
@@ -52,7 +56,7 @@
 	padding:5px 0;
 }
 
-.ua-responsive .screen-s {
+.ua-mobile,.screen-s {
 	#moodfm{
 		padding:10px;
 		.table(block);
@@ -69,5 +73,10 @@
 	}
 	.moodfm_input #message{
 		padding:2px;
+	}
+	.m-record-item{
+		background-color:#fff;
+		padding:10px;
+		margin-bottom:20px;
 	}
 }
