--- a/template/yylmacro/home/5.空间/iheader_space.htm
+++ b/template/yylmacro/home/5.空间/iheader_space.htm
@@ -1,7 +1,7 @@
 <header class="i-header">
-	<a class="i-header-back" href="./home.php"><i></i></a>
-	<div class="i-header-title"><!--{if $space[uid]}-->{$space[username]}<!--{/if}--></div>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
+	<div class="i-header-title">空间</div>
 	<div class="i-header-menu">
-		<a class="u-all" id="i-header-panel-tg" href="javascript:;"><span>更多</span></a>
+		<!--{if !$space[self]}--><a class="u-more" id="i-header-panel-tg" href="javascript:;"><i></i><span>更多</span></a><!--{/if}-->
 	</div>
 </header>
