--- a/css/user/space/space/blog.less
+++ b/css/user/space/space/blog.less
@@ -146,6 +146,7 @@
 
 .ua-mobile,.screen-s{
 	.m-space-bloglist-panel{
+		.none;
 	}
 
 	.m-space-bloglist{
@@ -161,7 +162,6 @@
 			}
 		}
 	}
-	
 
 	.m-space-bloglist-post{
 	    /*position: fixed;
