--- a/template/yylmacro/home/5.空间/space_menu.htm
+++ b/template/yylmacro/home/5.空间/space_menu.htm
@@ -1,7 +1,7 @@
 <!--{if $space[uid]}-->
 <div class="wp">
 	<div id="uhd">
-		<!--{if CURMODULE == 'follow'}-->
+		<!--{if CURMODULE == 'follow' && !$_G['mobile']}-->
 			<!--{subtemplate home/follow_user_header}-->
 		<!--{elseif !$space[self]}-->
 		<div class="mn">
