--- a/template/yylmacro/home/5.空间/space_profile_body.htm
+++ b/template/yylmacro/home/5.空间/space_profile_body.htm
@@ -1,4 +1,4 @@
-<div class="bm_c m-profile">
+<div class="m-profile">
 	<div class="pbm mbm bbda cl user-space-profile-block">
 		<h2 class="mbn m-name">
 			{$space[username]}
