--- a/css/user/space/space/follow.less
+++ b/css/user/space/space/follow.less
@@ -1,9 +1,9 @@
 .my_flw_stats{
 	.pa;.rt(0,0);
-	.w(168px);
 	ul{}
 	li{line-height:36px;border-bottom:1px solid #ddd;}
 	a{margin-left:5px;}
+	.w(120px);
 }
 #flw_header{
 	.pr;
@@ -61,7 +61,7 @@
 .flw_avt{
 	margin-right:5px;
 	margin-top:5px;
-	img{.size(20px);.db;}
+	//img{.size(20px);.db;}
 }
 .flw_author{
 }
@@ -110,18 +110,6 @@
 		margin-bottom: 0 !important;
 	}
 
-	#followlist li{padding:0 10px;}
-
-	#uhd .flw_hd{
-		float:none;margin:0 auto;
-		background-color: #fff;
-    	margin-bottom: 10px;
-    	border-bottom:1px solid #ddd;
-    	.w(auto);
-    	.tns{.auto(x);}
-    	//.none;
-	}
-
 	.flw_more{
 		.db;.x;
 		border-top:1px solid @blue-bo;
@@ -130,22 +118,16 @@
 		margin-top:10px;
 	}
 
+	.user-feed .i-header-panel{
+		.none;
+	}
+
 }
 
 .ua-mobile,.screen-s{
-	#uhd{
-		.flw_hd{
-			background: none;
-			border:none;
-			.pa;.lt(75px,36px);
-			margin-bottom:0;
-			.tns{
-				padding:5px 0;
-				th,td{padding:0 10px;}
-				p{.di;}
-			}
-			.mtm{.none;}
-		}
+
+	.flw_hd{
+		.none;
 	}
 
 	.user-space-follow{
@@ -158,14 +140,28 @@
 			font-size:13px;
 		}
 
+		.flw_feed{
+			//padding:10px;
+		}
+
 		.flw_article{
 			background-color:#fff;
-			padding:10px;
+			padding:10px !important;
+			margin:0 0 20px 0;
+
 			border-bottom:none;
-			margin-bottom:20px;
+			overflow:hidden;
 		}
 		.flw_avt{
 			margin-top:14px;
+			.none;
+		}
+	}
+
+	//我的关注页面
+	.user-space-feed{
+		.i-header-menu{
+			.none;
 		}
 	}
 }
