--- a/template/yylmacro/home/0.首页/os_header.htm
+++ b/template/yylmacro/home/0.首页/os_header.htm
@@ -2,7 +2,7 @@
 	<div class="user-os-profile">
  		<div class="user-os-avt">
  			<!--{if $_G['uid']}-->
-	 			<a class="u-avt" href="home.php?mod=space&uid=$_G[uid]">
+	 			<a class="u-avt" href="home.php?mod=space&uid=$_G[uid]&do=profile">
 	 				<!--{avatar($_G[uid],small)}-->
 	 			</a>
 	 			<div class="u-meta">
