--- a/template/yylmacro/home/5.空间/follow_feed.htm
+++ b/template/yylmacro/home/5.空间/follow_feed.htm
@@ -75,7 +75,7 @@
 					<!--{if $do == 'feed'}-->
 					<div class="my_flw_stats y">
 						<ul>
-							<li><span class="xg1">{lang follow}</span><a href="home.php?mod=space&uid=$uid"><strong class="xi2">$space['feeds']</strong></a></li>
+							<li><span class="xg1">{lang follow}</span><a href="home.php?mod=follow&uid=$uid&do=view&from=space"><strong class="xi2">$space['feeds']</strong></a></li>
 							<li><span class="xg1">{lang follow_add}</span><a href="home.php?mod=follow&do=following&uid=$uid"><strong class="xi2">$space['following']</strong></a></li>
 							<li><span class="xg1">{lang follow_follower}</span><a href="home.php?mod=follow&do=follower&uid=$uid"><strong class="xi2">$space['follower']</strong></a></li>
 						</ul>
@@ -576,7 +576,7 @@
 							<!--{/if}-->
 							<h6 class="pbn xs2"><a href="home.php?mod=space&uid=$fuser['followuid']" title="$fuser['fusername']" class="xi2" c="1" shref="home.php?mod=space&uid=$fuser['followuid']">$fuser['fusername']</a>&nbsp;<span id="followbkame_{$fuser['followuid']}" class="xg1 xs1 xw0"><!--{if $fuser['bkname']}-->$fuser[bkname]<!--{/if}--></span></h6>
 							<!--{if !empty($fuser['recentnote'])}--><p><span class="xg1">{lang follow_recent_note}: </span>$fuser[recentnote]</p><!--{/if}-->
-							<p class="ptm xg1">
+							<p class="xg1">
 								<!--{if $memberprofile[$fuid]['resideprovince'] || $memberprofile[$fuid]['residecity']}-->{lang comefrom}: $memberprofile[$fuid]['resideprovince'] $memberprofile[$fuid]['residecity'] &nbsp;<!--{/if}-->
 								{lang follow_follower}: <a href="home.php?mod=follow&do=follower&uid=$fuser['followuid']"><strong class="xi2" id="followernum_$fuser['followuid']">$memberinfo[$fuid]['follower']</strong></a>{lang person} &nbsp;
 								{lang follow_add}: <a href="home.php?mod=follow&do=following&uid=$fuser['followuid']"><strong class="xi2">$memberinfo[$fuid]['following']</strong></a>{lang person} &nbsp;
