--- a/template/yylmacro/home/5.空间/space_menu.htm
+++ b/template/yylmacro/home/5.空间/space_menu.htm
@@ -48,7 +48,7 @@
 		</div>
 		<!--{/if}-->
 		<div class="h cl">
-			<div class="icn avt"><a href="home.php?mod=space&uid=$space[uid]"><!--{avatar($space[uid],small)}--></a></div>
+			<div class="icn avt"><a href="home.php?mod=space&uid=$space[uid]&do=profile"><!--{avatar($space[uid],small)}--></a></div>
 			<h2 class="mt">
 				{$space[username]}
 				<!--{if isset($flag[$_G['uid']])}-->
