--- a/css/module/ui/tab.less
+++ b/css/module/ui/tab.less
@@ -35,7 +35,7 @@
 	}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 
 	.tbbox{
 		overflow-x:auto;
@@ -96,7 +96,7 @@
 	}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	//background-color:#f9f9f9;
 	.subtbbox{
 		overflow-x:auto;
