--- a/css/module/widget/w-adminpop.less
+++ b/css/module/widget/w-adminpop.less
@@ -6,7 +6,7 @@
 	//.pf !important;.rb(200px) !important;
 }
 
-.ua-responsive .screen-s.pg_viewthread #mdly{
+.ua-mobile .pg_viewthread #mdly,.screen-s.pg_viewthread #mdly{
     margin-left: 300px;
     width: 240px !important;
 }
