--- a/css/module/widget/w-filter.less
+++ b/css/module/widget/w-filter.less
@@ -71,7 +71,7 @@
 	}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.w-filter-box{.ps;}
 	.w-filter-font .label{
 		line-height:26px;
@@ -103,7 +103,9 @@
 	}
 
 }
-.ua-responsive .screen-s .e-fwq{
-	max-height:280px;
-	overflow-y:auto;
+.ua-mobile,.screen-s{
+	.e-fwq{
+		max-height:280px;
+		overflow-y:auto;
+	}
 }
