--- a/css/module/widget/w-gotofloor.less
+++ b/css/module/widget/w-gotofloor.less
@@ -21,18 +21,20 @@
 	}
 }
 
-.ua-responsive .screen-s .w-pages-bottom{
-	.w-pages-list,.w-gotofloor{
-		float:none;
-	}
-	.w-gotofloor{
-		border:none;
-		margin-right:0;
-		background-color: #f7f7f7;
-	    padding: 3px 0;
-    	border-radius: 4px;
-	}
-	.w-gotofloor-box{
-		.fr;
+.ua-mobile,.screen-s{
+	.w-pages-bottom{
+		.w-pages-list,.w-gotofloor{
+			float:none;
+		}
+		.w-gotofloor{
+			border:none;
+			margin-right:0;
+			background-color: #f7f7f7;
+		    padding: 3px 0;
+	    	border-radius: 4px;
+		}
+		.w-gotofloor-box{
+			.fr;
+		}
 	}
 }
