--- a/css/module/widget/w-order.less
+++ b/css/module/widget/w-order.less
@@ -21,6 +21,8 @@
 		background-position: 9px -34px;
 	}
 }
-.ua-responsive .screen-s .w-order{
-	#clearstickthread,#atarget{.none;}
+.ua-mobile,.screen-s{
+	.w-order{
+		#clearstickthread,#atarget{.none;}
+	}
 }
