--- a/css/module/widget/w-route.less
+++ b/css/module/widget/w-route.less
@@ -14,7 +14,9 @@
     padding:5px 10px;
     .r(4px);
 }
-.ua-responsive .screen-s #pt{
-	.none;
+.ua-mobile,.screen-s{
+    #pt{
+    	.none;
+    }
 }
 
