--- a/template/yylmacro/home/0.首页/os_nav.htm
+++ b/template/yylmacro/home/0.首页/os_nav.htm
@@ -2,19 +2,19 @@
 	<div class="user-os-nav">
 		<ul>
 			<!-- <li><a href="./home.php?mod=space&do=pm"><i class="u-msg"></i>我的消息<em class="e-msg"></em></a></li> -->
-			<li><a href="./forum.php?mod=guide&view=my&type=thread"><i class="u-my"></i>我的帖子</a></li>
-			<li><a href="./home.php?mod=space&do=favorite&view=me"><i class="u-fav"></i>我的收藏</a></li>
-			<li><a href="./home.php?mod=follow"><i class="u-feed"></i>我的关注</a></li>
-			<li><a href="./home.php?mod=space&do=profile"><i class="u-space"></i>我的空间</a></li>
+			<li><a href="./forum.php?mod=guide&view=my&type=thread"><i class="u-my"></i>我的帖子<em></em></a></li>
+			<li><a href="./home.php?mod=space&do=favorite&view=me"><i class="u-fav"></i>我的收藏<em></em></a></li>
+			<li><a href="./home.php?mod=follow"><i class="u-feed"></i>我的关注<em></em></a></li>
+			<li><a href="./home.php?mod=space&do=profile"><i class="u-space"></i>我的空间<em></em></a></li>
 		</ul>
 	</div>
 
 	<div class="user-os-nav">
 		<ul>
-			<li><a href="./home.php?mod=spacecp&ac=credit&op=buy"><i class="u-buy"></i>充值</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=usergroup&do=list"><i class="u-vip"></i>开通VIP会员</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=invite"><i class="u-code"></i>邀请码</a></li>
-			<li><a href="./gift"><i class="u-gift"></i>积分兑换</a></li>
+			<li><a href="./home.php?mod=spacecp&ac=credit&op=buy"><i class="u-buy"></i>充值<span><!--{block/1777}--></span><em></em></a></li>
+			<li><a href="./home.php?mod=spacecp&ac=usergroup&do=list"><i class="u-vip"></i>开通VIP会员<span><!--{block/1778}--></span><em></em></a></li>
+			<li><a href="./home.php?mod=spacecp&ac=invite"><i class="u-code"></i>邀请码<em></em></a></li>
+			<li><a href="./gift"><i class="u-gift"></i>积分兑换<span><!--{block/1775}--></span><em></em></a></li>
 		</ul>
 	</div>
 </div>
