个人中心首页手机版

--- a/css/user/index/nav.less
+++ b/css/user/index/nav.less
@@ -17,12 +17,15 @@
 		.pr;
 	}
 	em{
-		background-color:#f00;color:#fff;.x;
-		.w(18px);.r(2px);
-		.fz(12px,14px);
-		.ct(y,14px);right:10px;
-		padding:0 2px;
-		.none;
+		background:url('@{url}user/arrow-right.svg') no-repeat 0 0;
+		background-size:100% auto;
+		.db;.ct(y,10px);.size(10px);right:15px;
+	}
+	span{
+		.db;
+		right:35px;
+		.ct(y,24px);
+		color:#999;.x(right);
 	}
 	i{
 		.size(18px);.dbi;.y;margin-right:10px;margin-top:-3px;
