收藏与我的帖子纸片

--- a/css/user/bbs/guide/item.less
+++ b/css/user/bbs/guide/item.less
@@ -56,3 +56,21 @@
 		font-size:13px;
 	}
 }
+
+
+.ua-mobile,.screen-s{
+	body,.bm_c{
+		background-color:#fafafa;
+	}
+	.u-guideitem{
+		background-color:#fff;
+		border-bottom:none;
+		margin-bottom:10px;
+	}
+	.u-guideitem-reply,.u-guideitem-cmt{
+		margin-top:-10px;
+		background-color:#fff;
+		margin-bottom:10px;
+		font-size:13px;
+	}
+}
