--- a/css/user/msg/list.less
+++ b/css/user/msg/list.less
@@ -34,7 +34,6 @@
 
 .ua-mobile,.screen-s{
 	.m-msg-list{
-		padding:0 10px;
 	}
 	.m-msg-list-item .pm_c{
 	}
@@ -69,7 +68,18 @@
 
 }
 
-
+.ua-mobile,.screen-s{
+	body{
+		background-color:#fafafa;
+	}
+	.m-msg-list{
+	}
+	.m-msg-list-item{
+		background-color:#fff;
+		border-bottom:none;
+		margin-bottom:10px;
+	}
+}
 
 
 
