--- a/css/user/bbs/fav.less
+++ b/css/user/bbs/fav.less
@@ -41,11 +41,23 @@
 			.db;
 		}
 		.y{
-			.pa;.rb(0,10px);
+			.pa;.rb(10px,10px);
 		}
 	}
 
-	form{
+	.pns{
 		padding:0 10px;
+	}
+}
+
+.ua-mobile,.screen-s{
+	body{
+		background-color:#fafafa;
+	}
+	.user-fav-list li{
+		background-color:#fff;
+		border-bottom:none;
+		margin-bottom:10px;
+		padding:10px;
 	}
 }
