--- a/css/user/bbs/fav.less
+++ b/css/user/bbs/fav.less
@@ -51,8 +51,12 @@
 }
 
 .ua-mobile,.screen-s{
-	body{
+	form{
 		background-color:#fafafa;
+		padding:10px 0;
+	}
+	.user-fav-nav{
+		background-color:#fff;
 	}
 	.user-fav-list li{
 		background-color:#fff;
