--- a/css/user/bbs/guide/item.less
+++ b/css/user/bbs/guide/item.less
@@ -59,8 +59,9 @@
 
 
 .ua-mobile,.screen-s{
-	body,.bm_c{
+	.bm_c{
 		background-color:#fafafa;
+		padding:10px 0;
 	}
 	.u-guideitem{
 		background-color:#fff;
