Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/user/msg/list.less
+++ b/css/user/msg/list.less
@@ -23,6 +23,7 @@
 		margin-right:5px;
 	}
 }
+
 .m-msg-list-item{
 
 	&.hover{
@@ -36,6 +37,7 @@
 
 	.pm_c{
 		padding-left:0;
+		color:#666;
 	}
 
 }
@@ -51,6 +53,12 @@
 	}
 	.pm_c{
 		padding-left:0;
+		font-size:13px;
+		line-height:2.2;
+	}
+	.ntc_body{
+		font-size:13px;
+		line-height:2.2;
 		color:#666;
 	}
 	.pm_o{
