个人中心与系统复查修订

--- a/css/system/faq/content.less
+++ b/css/system/faq/content.less
@@ -115,6 +115,12 @@
 	.m-faq-content .um{
 		overflow-x:auto;
 	}
+	.m-faq-list{
+		li{
+			padding:5px 0;
+			font-size:13px;
+		}
+	}
 }
 
 .m-faq-details{
