--- a/css/system/faq/layout.less
+++ b/css/system/faq/layout.less
@@ -1,6 +1,5 @@
 .faq-container{
 	min-height:400px;
-	padding-top:20px;
 }
 .ua-mobile,.screen-s{
 	.faq-container{
@@ -26,5 +25,8 @@
 		.w(auto);
 		float:none;
 		margin-top:20px;
+	}
+	.faq-container{
+		padding-top:20px;
 	}
 }
