--- a/css/user/credit/gift.less
+++ b/css/user/credit/gift.less
@@ -133,9 +133,17 @@
 		.u-screenshot{.pa;.lt(0,0);.size(100px);}
 		.u-meta{.x(left);}
 		.u-go{margin:0;}
+
+		.u-price,.u-boss,.u-num{
+			font-size:13px;
+			color:#666;
+		}
 	}
 	.m-gift-record{
 		padding:10px;
+	}
+	.m-gift-record,.m-gift-rule{
+		font-size:13px;
 	}
 }
 
