Signed-off-by: unknown <17229398@qq.com>

--- a/css/user/msg/list.less
+++ b/css/user/msg/list.less
@@ -1,6 +1,10 @@
 .m-msg-list{
 	
 }
+.pm_op{
+	padding-left:0;
+}
+
 .pm_op_r{
 	padding-right:0;
 }
@@ -32,6 +36,7 @@
 
 	.m-msg-list-item-check{
 		.fr;
+		margin:0;
 		*{.pointer;}
 	}
 
