账号系统手机版修订

--- a/css/user/member/invitecode.less
+++ b/css/user/member/invitecode.less
@@ -80,7 +80,7 @@
 		padding:5px 40px;
 	}
 }
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	/*.invitecode-header{
 		.none;
 	}*/
@@ -152,7 +152,7 @@
 		}
 	}
 }
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.invitecode-success .invitecode-codebox{
 		.w(100%);
 		box-sizing:border-box;
