--- a/css/user/member/member.less
+++ b/css/user/member/member.less
@@ -4,8 +4,38 @@
 @import url('../../module/ui/text.less');		//配色
 @import url('../../module/ui/tips.less');		//配色
 
+@import url('form.less');
+@import url('login.less');
+@import url('register.less');
+@import url('find.less');
+
+.ua-mobile,.screen-s{
+	overflow-x:hidden;
+}
 .member-container{
 	padding:20px 0;
+}
+.member-main{
+	.member-login,.member-forget,.member-register{
+		padding-top:20px;
+	}
+
+	.bm_c{padding:0;}
+	.flb{
+		.h(auto);
+		.clearfix;
+		padding:0;
+		.tips(yel);
+		em{color:@yel;}
+	}
+}
+.ua-mobile,.screen-s{
+	.member-container{
+		padding:10px;
+	}
+	.member-login,.member-forget,.member-register{
+		padding:0;
+	}
 }
 .member-header{
 	border-bottom:1px solid #ddd;
@@ -24,182 +54,8 @@
 	a:hover{color:@blue-link;}
 }
 
-.member-main{
-	.bm_c{padding:0;}
-	.flb{
-		.h(auto);
-		.clearfix;
-		padding:0;
-		.tips(yel);
-		em{color:@yel;}
-	}
-}
-.member-form{
-	padding:10px 300px 10px 20px;
-	form{
-		margin-top:20px;
-	}
-	.pr;
-	.rfm .px{
-		width:200px !important;
-	}
-	.p_fre{
-
-	}
-	.rfm{
-		.w(auto);
-		border-bottom:none;
-
-		th{
-			.x(left);
-			.w(100px);
-			font-size:14px;
-		}
-
-		.px{
-			&:extend(.u-text);
-			.lh(32px);
-			padding:0 10px;
-			&:focus{
-				border-color:@blue-dark;
-			}
-		}
-		select{
-			/*.w(210px) !important;
-			max-width:auto;*/
-		}
-		.rq{
-			.bold;
-		}
-		margin-bottom:10px;
-	}
-	.rfm .p_chk{
-		color:@yel;
-		.default-fontfamily;
-		.normal;
-	}
-	.u-msg-codetips{
-		.db;padding:5px 0;
-		.color(#555,@blue-link,@blue-link);
-		a:hover{text-decoration:underline;}
-	}
-	.u-btn-ok{
-		padding:5px 40px;
-	}
-}
-.m-login-way{
-	/*background-color:#f7f7f7;
-	border:1px solid #eee;
-	padding:5px 10px;*/
-	//.clearfix;
-	.pa;.rt(0,20px);
-	a{
-		margin-right:10px;
-		.dbi;.y;
-		background-color:#f9f9f9;
-		padding:20px;
-		.r(4px);
-		border:1px solid #ddd;
-
-		i{.db;.size(40px,34px);background:url('@{url}user/union-login.png') no-repeat center 0;}
-		img{.none;}
-
-		&:hover{background-color:#fff;border-color:@yel;}
-		
-	}
-	.u-title{
-		//.fl;margin-right:20px;
-		margin-bottom:20px;
-		color:#555;
-		border-bottom:1px dotted #ddd;
-		padding-bottom:5px;
-	}
-	.u-list{
-		.x;
-	}
-	.u-qq i{
-	}
-	.u-weibo i{
-		background-position:0 -34px;
-	}	
-	.u-weixin i{
-		background-position:0 -67px;
-	}
-}
-.m-login-extend{
-	padding-left:120px;
-	a:hover{
-		color:@blue-link;
-		text-decoration:underline;
-	}
-}
-.m-forget{
-	.dbi;
-	i{.size(13px);.dbi;.y;margin-top:-2px;margin-right:3px;background:url('@{url}icon/faq.gif') no-repeat 0 0;}
-	margin-right:10px;
-}
-.m-resetcookie{
-	.dbi;
-	i{.size(12px);.dbi;.y;margin-top:-3px;margin-right:3px;background:url('@{url}icon/app_set.gif') no-repeat 0 0;}
-}
-.m-forget-tips{
-	.color(#555);
-}
-.member-forget{
-	.flb{.none;}
-}
-.m-login-register{
-	.none;
-}
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.member-header{.none;}
-	//.member-container{padding:0;}
-	.member-form{padding:0;}
-	.mtw{margin-top:0 !important;}
-	.rfm{
-		margin-bottom:10px;
-
-		table{
-			.table(block);
-			.full(x);
-		}
-		tr,td,th{
-			.full(x);
-			padding:0;
-		}
-		th{
-			.x(left);
-			.bold;
-			line-height:2.2;
-		}
-		.px,select{
-			.db;
-			.w(100%) !important;box-sizing:border-box;
-			.fzlh(1rem,40px);
-		}
-		.p_chk,.p_tip{
-			.db;.ps;
-			padding-top:5px;
-			.fz(13px);
-		}
-	}
-	#layer_reginfo_b th{.none;}
-	.m-login-way{
-		.ps;
-	}
-	.u-btn-ok{
-		.w(100%);
-		box-sizing:border-box;
-	}
-	.m-login-extend{
-		padding-left:0;
-		.x;
-	}
-	.m-login-register{
-		.db;
-		.color(@yel);
-		.bold;
-	}
 }
 
 //执行完窗口
@@ -231,13 +87,28 @@
 		}
 	}
 }
-.ua-responsive .screen-s{
-	.nfl .f_c{
+.ua-mobile,.screen-s{
+	.nfl .f_c,.fwin .rfm, .nfl .f_c .rfm{
 		.w(auto);
+	}
+	.nfl .f_c{
+		border:none;
+	}
+	.alert_right, .alert_error, .alert_info{
+		.fz(13px,2);
+	}
+	#main_message{
+		padding:0;
+	}
+	.nfl .f_c{
+		padding:10px;
+	}
+	#messagelogin .login-container{
+		padding:0;
 	}
 }
 
-//登录弹层
+//弹层
 .fwinmask{
 	.u-btn-ok{
 		.h(auto);
@@ -252,53 +123,5 @@
 	}
 	.m-forget-tips{
 		.w(400px);
-	}
-}
-
-//未登录回帖提示
-.nfl .f_c,.fwin .rfm, .nfl .f_c .rfm{
-	.w(auto);
-}
-.ua-responsive .screen-s{
-	#fwin_reply,#fwin_login{
-
-	}
-}
-
-//找回密码
-.password-container{
-	.member-password{
-		padding:20px 20px 0 20px;
-		p{
-			margin-bottom:20px;
-		}
-		em{
-			//padding-right:20px;
-			font-size:14px;
-			.dbi;
-			.w(100px);
-		}
-		.u-text{
-			padding:0 10px;
-		}
-		.u-msg-password{
-			padding-left:10px;
-			color:#555;
-		}
-	}
-	.p_right{
-		.w(auto);
-	    padding-bottom: 10px;
-	    background-position:20px bottom;
-	}
-}
-
-.ua-responsive .screen-s{
-	.password-container .member-password .u-text{
-		.db;.full(x);box-sizing:border-box;
-	}
-	.password-container .member-password .u-msg-password{
-		padding-left:0;
-		.db;
 	}
 }
