--- a/css/module/forum/forumdisplay/c-flist.less
+++ b/css/module/forum/forumdisplay/c-flist.less
@@ -18,8 +18,19 @@
 	padding:10px 0;
 }
 
-.ua-responsive .screen-s{
-	.boardnav{
-		padding:10px 0;
+.ua-mobile,.screen-s{
+	.listpage-container{
+		background-color:#fafafa;
+		.w-pages-next{
+			.db;.w(60%);.auto(x);
+		}
+		.w-pages{
+			padding-top:10px;
+			font-size:12px;
+		}
+		//目前的评价指数
+		.p_pop .p_opt{
+			font-size:12px;
+		}
 	}
 }
