--- a/css/user/member/invitecode.less
+++ b/css/user/member/invitecode.less
@@ -81,9 +81,12 @@
 	}
 }
 .ua-mobile,.screen-s{
-	/*.invitecode-header{
+	.invitecode-header{
 		.none;
-	}*/
+	}
+	.invitecode-container{
+		padding:10px;
+	}
 	.invitecode-content .m-msg-wx{
 		font-size:13px;
 		margin-bottom:10px;
@@ -92,6 +95,10 @@
 		.table(block);
 		margin-bottom:5px;
 		padding-bottom:5px;
+		border-bottom:none;
+	}
+	.rfm.bw0 th{
+		.none;
 	}
 	table{
 		.full(x);
