--- a/css/module/widget/w-pages.less
+++ b/css/module/widget/w-pages.less
@@ -7,12 +7,13 @@
 .w-pages-list{
 	.fr;
 	.clearfix;
+	
 	//当前页
 	strong{background-color:#f2f2f2;cursor:default;}
 	a,strong,label{border-color:#ddd;margin-bottom:5px;}
 	a:hover{border-color:#666;color:#333;}
 
-	.pg{margin:0 !important;}
+	.pg{margin:0 !important;.clearfix;}
 }
 
 //翻页旁发布按钮
