--- a/template/default/forum/forumdisplay_list.htm
+++ b/template/default/forum/forumdisplay_list.htm
@@ -43,6 +43,13 @@
 											</span>
 										<!--{/if}-->
 
+									<!-- 头像 -->
+										<!--{if $_G['mobile']}-->
+											<span class="u-avt">
+												<a href="home.php?mod=space&uid=$thread[authorid]&do=profile"><img src="http://www.jx3pve.com/uc_server/avatar.php?uid=$thread[authorid]&size=small" alt=""></a>
+											</span>
+										<!--{/if}-->
+
 									<!-- 最后更新时间 -->
 										<span class="u-lastedit e-lastedit">
 											$thread[lastedit]
@@ -104,9 +111,34 @@
 									<!-- 查看数 -->
 										<span class="u-views">
 											<!--{if $thread['isgroup'] != 1}-->
-												$thread[views]
+												<i></i>$thread[views]
 											<!--{else}-->
-												{$groupnames[$thread[tid]][views]}
+												<i></i>{$groupnames[$thread[tid]][views]}
+											<!--{/if}-->
+										</span>
+
+									<!-- 点赞 -->
+										<span class="u-qc">
+											<span class="u-views">
+												<!--{if $thread['isgroup'] != 1}-->
+													<i></i>$thread[views]
+												<!--{else}-->
+													<i></i>{$groupnames[$thread[tid]][views]}
+												<!--{/if}-->
+											</span>
+
+											<em class="u-divding"></em>
+
+											<!--{if $_G['mobile']}-->
+											<!--{if ($_G['group']['allowrecommend'] || !$_G['uid']) && $_G['setting']['recommendthread']['status']}-->
+											<!--{if !empty($_G['setting']['recommendthread']['addtext'])}-->
+												<a class="u-zan c-flist-item-zan" 
+													href="forum.php?mod=misc&action=recommend&do=add&tid=$thread[tid]&hash={FORMHASH}" 
+													{if $_G['uid']}onclick="ajaxmenu(this, 3000, 1, 0, '43', 'recommendupdate({$_G['group']['allowrecommend']},$thread[tid])');return false;"{/if}>
+													<i></i><span class="c-flist-item-zannum" id="c-flist-item-zan-$thread[tid]">$thread[recommend_add]</span>
+												</a>
+											<!--{/if}-->
+											<!--{/if}-->
 											<!--{/if}-->
 										</span>
 
